codepkg/objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>AccountContactJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact Junction</label>
        <referenceTo>AccountContactRole__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Extension</label>
        <referenceTo>Application_Extension__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>Pre_Application__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Responsible Representative</fullName>
                </value>
                <value>
                    <fullName>Match Commitment</fullName>
                </value>
                <value>
                    <fullName>Maintenance Commitment</fullName>
                </value>
                <value>
                    <fullName>Contributor</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
                <value>
                    <fullName>FEMA EHP Analyst</fullName>
                </value>
                <value>
                    <fullName>FEMA Viewer</fullName>
                </value>
                <value>
                    <fullName>FEMA Programmatic Analyst</fullName>
                </value>
                <value>
                    <fullName>Authorized Agent</fullName>
                    <isActive>false</isActive>
                    <label>Authorized Agent</label>
                </value>
                <value>
                    <fullName>Requestor</fullName>
                    <isActive>false</isActive>
                    <label>Requestor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Status__c</fullName>
        <label>Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent For Signature</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>